Changed from images to vid, fixed colored links (chnages colro before & after clicked)

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -655,3 +655,15 @@ video {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
+
+a:link {
+  color: burlywood;
+}
+
+a:visited {
+  color: green;
+}
+
+a:active {
+  color: blue;
+}
