--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,3 +1,19 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+a:link {
+    color: green;
+  }
+  
+  a:visited {
+    color: burlywood;
+  }
+  
+  a:hover {
+    color: brown;
+  }
+  
+  a:active {
+    color: blue;
+  }
