--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -554,25 +554,29 @@ video {
 .rounded-lg {
   border-radius: 0.5rem;
 }
-.border-2 {
-  border-width: 2px;
+.border-4 {
+  border-width: 4px;
 }
 .border-b {
   border-bottom-width: 1px;
 }
-.border-b-4 {
-  border-bottom-width: 4px;
+.border-b-8 {
+  border-bottom-width: 8px;
 }
 .border-none {
   border-style: none;
 }
-.border-slate-100 {
+.border-slate-200 {
   --tw-border-opacity: 1;
-  border-color: rgb(241 245 249 / var(--tw-border-opacity));
+  border-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
-.bg-amber-100 {
+.border-teal-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(20 184 166 / var(--tw-border-opacity));
+}
+.bg-gray-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(254 243 199 / var(--tw-bg-opacity));
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 .bg-transparent {
   background-color: transparent;
@@ -629,9 +633,9 @@ video {
 .leading-tight {
   line-height: 1.25;
 }
-.text-sky-500 {
+.text-purple-500 {
   --tw-text-opacity: 1;
-  color: rgb(14 165 233 / var(--tw-text-opacity));
+  color: rgb(168 85 247 / var(--tw-text-opacity));
 }
 .text-gray-700 {
   --tw-text-opacity: 1;
@@ -646,34 +650,31 @@ video {
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-
-a:link {
-    color: green;
-  }
-  
-  a:visited {
-    color: burlywood;
-  }
-  
-  a:hover {
-    color: brown;
-  }
-  
-  a:active {
-    color: blue;
-  }
-  
-  .hover\:border-blue-700:hover {
+.hover\:border-teal-700:hover {
   --tw-border-opacity: 1;
-  border-color: rgb(29 78 216 / var(--tw-border-opacity));
+  border-color: rgb(15 118 110 / var(--tw-border-opacity));
 }
-  
-  .hover\:bg-blue-700:hover {
+.hover\:bg-teal-700:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+  background-color: rgb(15 118 110 / var(--tw-bg-opacity));
 }
-  
-  .focus\:outline-none:focus {
+.focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+a:link {
+  color: green;
+}
+
+a:visited {
+  color: burlywood;
+}
+
+a:hover {
+  color: brown;
+}
+
+a:active {
+  color: blue;
 }
